--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 ---
 layout: page
 title: "About"
-description: "你是我的梦想"
+description: "好好学习，天天向上"
 header-img: "img/about-bg.jpg"
-multilingual: true
+multilingual: false
 ---
 
 {% include multilingual-sel.html %}
