--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@ layout: page
 title: "About"
 description: "好好学习，天天向上"
 header-img: "img/about-bg.jpg"
-multilingual: false
+multilingual: true
 ---
 
-{% include multilingual-sel.html %}
+<!-- {% include multilingual-sel.html %} -->
 
 <!-- Chinese Version -->
 <div class="zh post-container">
@@ -15,10 +15,10 @@ multilingual: false
 </div>
 
 <!-- English Version -->
-<div class="en post-container">
+<!-- <div class="en post-container">
     {% capture about_en %}{% include about/en.md %}{% endcapture %}
     {{ about_en | markdownify }}
-</div>
+</div> -->
 
 
 {% if site.disqus_username %}
